# Scraping

./: .env.dist  .gitignore  README.md  app.py  credentials.json  pyproject.toml
data/: config.py  spreadsheets.py
models/: base.py  house.py
service/: houses.py  save_google_sheets.py  save_house_db.py  save_house_google_sheets.py
